[package]
edition = "2021"
name = "gkotulski_fast-lzma"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
lzma-rs = "0.3.0"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.0", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
